Correctly wrapping text in forms

--- a/ui/common.css
+++ b/ui/common.css
@@ -379,6 +379,9 @@ body {
 
 /* Form1 */
 .form1 {
+  text-wrap: wrap;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .form1 > fieldset,
